# Test-repository

./: CMakeLists.txt
include/: druhy.h  prvni.h
include2/: treti.h
lib/inc/: druha_lib.h  prvni_lib.h
lib/src/: druha_lib.c  prvni_lib.c
module/inc/: prvni_mod.h
module/src/: prvni_mod.c
src/: druhy.c  main.c  prvni.c
src2/: treti.c
